Fix cell text overflow bug
Fixed a big where an X or O would overflow into adjacent cells,
causing erroneous detection of "already played cell" in the
adjacent border areas of unplayed cells.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -117,6 +117,7 @@ $grey-out-game-color: $charcoal-grey-color;
   align-items: center;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 .game-status {
